<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre">Mascota</string>
    <string name="voto">0</string>
    <string name="titulo_inicial">Bienvenidos</string>
    <string name="boton_accesar">Accesar</string>
    <string name="mensaje">Voto para </string>
    <string name="texto_accion">Click</string>
    <string name="top_five">Top 5</string>
    <string name="top_five_desc">Las 5 mascotas con mas votos</string>
    <string name="pListaMascotas">pListaMascotas</string>
    <string name="pParametros">pParametros</string>
    <string name="mContacto">Contacto</string>
    <string name="mAcercade">Acerca de</string>
    <string name="mConfCta">Configurar Cuenta</string>
    <string name="hintEmail">Correo Electrónico</string>
    <string name="hintNombre">Nombre Completo</string>
    <string name="hintMensaje">Su mensaje</string>
    <string name="hintCuentaUsuario">Escribe tu usuario</string>
    <string name="textoBoton">Enviar Mensaje</string>
    <string name="textoBotonGuardar">Guardar Cuenta</string>
    <string name="titulo_fragment_mascotas">Mascotas</string>
    <string name="titulo_fragment_perfil_mascotas">Perfil de...</string>
    <string name="copyRight">Desarrollado por: Yazalde Amaya</string>
    <string name="curso">Curso de Desarrollo de aplicaciones con Android - Coursera</string>
    <string name="mensaje_enviado">Correo Enviado</string>
    <string name="mensaje_enviando">Enviando Correo</string>
    <string name="mensaje_espere">Por favor, espere... </string>
    <string name="mensaje_subject">Correo De: </string>
    <string name="msgDatosFaltantes">Datos Incompletos</string>
    <string name="msgCuentaErrada">Cuenta Errada</string>
    <string name="msgCuentaGuardada">Cuenta Guardada</string>
    <string name="msgCuentaNoAceptada">Cuenta No Aceptada</string>
</resources>