<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/imgEstrella"
        android:icon="@drawable/ic_estrella"
        android:title="@string/top_five"
        android:contentDescription="@string/top_five_desc"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/mContacto"
        android:title="@string/mContacto"
        android:orderInCategory="10" />
    <item
        android:id="@+id/mAcercade"
        android:title="@string/mAcercade"
        android:orderInCategory="20" />
    <item
        android:id="@+id/mConfigurarCuenta"
        android:title="@string/mConfCta"
        android:orderInCategory="30" />
 </menu>